Fix docs errors
